--- a/DiccionarioDatosBienestarMejorado.html
+++ b/DiccionarioDatosBienestarMejorado.html
@@ -61,9 +61,9 @@
 </div>
 <h2>Alphabetic Index</h2>
 <ul>
-<li><a href='#AcompañamientoIntegral'>AcompañamientoIntegral</a></li>
+<li><a href='#Acompaï¿½amientoIntegral'>Acompaï¿½amientoIntegral</a></li>
 <li><a href='#Actividad'>Actividad</a></li>
-<li><a href='#Actividad Física y Deportes'>Actividad Física y Deportes</a></li>
+<li><a href='#Actividad Fï¿½sica y Deportes'>Actividad Fï¿½sica y Deportes</a></li>
 <li><a href='#ActividadOrganizadores'>ActividadOrganizadores</a></li>
 <li><a href='#ActividadParticipantes'>ActividadParticipantes</a></li>
 <li><a href='#AlianzasEstrategicas'>AlianzasEstrategicas</a></li>
@@ -79,7 +79,7 @@
 <li><a href='#ComitNacMatricula'>ComitNacMatricula</a></li>
 <li><a href='#ComitSedeDirectores'>ComitSedeDirectores</a></li>
 <li><a href='#ConBieneUniv'>ConBieneUniv</a></li>
-<li><a href='#ConcocatoriaSelección'>ConcocatoriaSelección</a></li>
+<li><a href='#ConcocatoriaSelecciï¿½n'>ConcocatoriaSelecciï¿½n</a></li>
 <li><a href='#Contacto'>Contacto</a></li>
 <li><a href='#ConvocGAI (GrArtInst)'>ConvocGAI (GrArtInst)</a></li>
 <li><a href='#ConvocGAI (GrArtInst)_has_Actividad'>ConvocGAI (GrArtInst)_has_Actividad</a></li>
@@ -130,9 +130,9 @@
 <li><a href='#PersonalSalud'>PersonalSalud</a></li>
 <li><a href='#Producto'>Producto</a></li>
 <li><a href='#Producto_ofrecer_TiendaBienestarUN'>Producto_ofrecer_TiendaBienestarUN</a></li>
-<li><a href='#Programa Área Deportes'>Programa Área Deportes</a></li>
-<li><a href='#ProgramaÁreaAcompañamiento'>ProgramaÁreaAcompañamiento</a></li>
-<li><a href='#ProyectoDeAcompañamiento'>ProyectoDeAcompañamiento</a></li>
+<li><a href='#Programa ï¿½rea Deportes'>Programa ï¿½rea Deportes</a></li>
+<li><a href='#Programaï¿½reaAcompaï¿½amiento'>Programaï¿½reaAcompaï¿½amiento</a></li>
+<li><a href='#ProyectoDeAcompaï¿½amiento'>ProyectoDeAcompaï¿½amiento</a></li>
 <li><a href='#Publicacion'>Publicacion</a></li>
 <li><a href='#PuntoDeContacto'>PuntoDeContacto</a></li>
 <li><a href='#RecGeneralBienUniv'>RecGeneralBienUniv</a></li>
@@ -146,8 +146,8 @@
 <li><a href='#Vicerrector'>Vicerrector</a></li>
 <li><a href='#estTieneRepEst'>estTieneRepEst</a></li>
 </ul>
-<table id='AcompañamientoIntegral'>
-<caption>AcompañamientoIntegral</caption>
+<table id='Acompaï¿½amientoIntegral'>
+<caption>Acompaï¿½amientoIntegral</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
     <th>Column name</th>
@@ -189,7 +189,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Extensión</td>
+    <td>Extensiï¿½n</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -202,7 +202,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>CorreoElectrónico</td>
+    <td>CorreoElectrï¿½nico</td>
     <td>VARCHAR(60)</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -215,6 +215,7 @@
     <td></td>
 </tr>
 <table id='Actividad'>
+<p>Se encarga de </p><br>
 <caption>Actividad</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -308,8 +309,8 @@
     <td></td>
     <td></td>
 </tr>
-<table id='Actividad Física y Deportes'>
-<caption>Actividad Física y Deportes</caption>
+<table id='Actividad Fï¿½sica y Deportes'>
+<caption>Actividad Fï¿½sica y Deportes</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
     <th>Column name</th>
@@ -364,7 +365,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Extensión</td>
+    <td>Extensiï¿½n</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -377,7 +378,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>CorreoElectrónico</td>
+    <td>CorreoElectrï¿½nico</td>
     <td>VARCHAR(60)</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -1383,8 +1384,8 @@
     <td></td>
     <td></td>
 </tr>
-<table id='ConcocatoriaSelección'>
-<caption>ConcocatoriaSelección</caption>
+<table id='ConcocatoriaSelecciï¿½n'>
+<caption>ConcocatoriaSelecciï¿½n</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
     <th>Column name</th>
@@ -1400,7 +1401,7 @@
     <th>Comment</th>
 </tr>
 <tr>
-    <td>idConcocatoriaSelección</td>
+    <td>idConcocatoriaSelecciï¿½n</td>
     <td>INT</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -1465,7 +1466,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Programa Área Deportes_idNombrePrograma</td>
+    <td>Programa ï¿½rea Deportes_idNombrePrograma</td>
     <td>VARCHAR(70)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -1478,7 +1479,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Programa Área Deportes_Actividad Física y Deportes_idNombreArea</td>
+    <td>Programa ï¿½rea Deportes_Actividad Fï¿½sica y Deportes_idNombreArea</td>
     <td>VARCHAR(50)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -1507,7 +1508,7 @@
     <th>Comment</th>
 </tr>
 <tr>
-    <td>NombreÁrea</td>
+    <td>Nombreï¿½rea</td>
     <td>VARCHAR(90)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -1533,7 +1534,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Teléfono</td>
+    <td>Telï¿½fono</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -1546,7 +1547,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Extensión</td>
+    <td>Extensiï¿½n</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -1559,7 +1560,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>CorreoElectrónico</td>
+    <td>CorreoElectrï¿½nico</td>
     <td>VARCHAR(50)</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -2006,7 +2007,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Período</td>
+    <td>Perï¿½odo</td>
     <td>VARCHAR(30)</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -2019,7 +2020,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Condición</td>
+    <td>Condiciï¿½n</td>
     <td>VARCHAR(45)</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -2032,7 +2033,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Programa Área Deportes_idNombrePrograma</td>
+    <td>Programa ï¿½rea Deportes_idNombrePrograma</td>
     <td>VARCHAR(70)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -2045,7 +2046,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Programa Área Deportes_Actividad Física y Deportes_idNombreArea</td>
+    <td>Programa ï¿½rea Deportes_Actividad Fï¿½sica y Deportes_idNombreArea</td>
     <td>VARCHAR(50)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -2900,7 +2901,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>ProgramaÁreaAcompañamiento_Nombre</td>
+    <td>Programaï¿½reaAcompaï¿½amiento_Nombre</td>
     <td>VARCHAR(65)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -2913,7 +2914,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>ProgramaÁreaAcompañamiento_AcompañamientoIntegral_idNombreArea</td>
+    <td>Programaï¿½reaAcompaï¿½amiento_Acompaï¿½amientoIntegral_idNombreArea</td>
     <td>VARCHAR(50)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -3021,7 +3022,7 @@
 </tr>
 <tr>
     <td>Tipo</td>
-    <td>ENUM("Evento", "Actividad Lúdica", "Instrucción", "Promoción Interculturalidad", "Expresión Talentos")</td>
+    <td>ENUM("Evento", "Actividad Lï¿½dica", "Instrucciï¿½n", "Promociï¿½n Interculturalidad", "Expresiï¿½n Talentos")</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
     <td>&nbsp;</td>
@@ -4591,7 +4592,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>norAño</td>
+    <td>norAï¿½o</td>
     <td>TINYINT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -5267,8 +5268,8 @@
     <td>0</td>
     <td></td>
 </tr>
-<table id='Programa Área Deportes'>
-<caption>Programa Área Deportes</caption>
+<table id='Programa ï¿½rea Deportes'>
+<caption>Programa ï¿½rea Deportes</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
     <th>Column name</th>
@@ -5297,7 +5298,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Extensión</td>
+    <td>Extensiï¿½n</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -5310,7 +5311,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Actividad Física y Deportes_idNombreArea</td>
+    <td>Actividad Fï¿½sica y Deportes_idNombreArea</td>
     <td>VARCHAR(50)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -5322,8 +5323,8 @@
     <td></td>
     <td></td>
 </tr>
-<table id='ProgramaÁreaAcompañamiento'>
-<caption>ProgramaÁreaAcompañamiento</caption>
+<table id='Programaï¿½reaAcompaï¿½amiento'>
+<caption>Programaï¿½reaAcompaï¿½amiento</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
     <th>Column name</th>
@@ -5352,7 +5353,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Extensión</td>
+    <td>Extensiï¿½n</td>
     <td>INT</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -5365,7 +5366,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>AcompañamientoIntegral_idNombreArea</td>
+    <td>Acompaï¿½amientoIntegral_idNombreArea</td>
     <td>VARCHAR(50)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -5377,8 +5378,8 @@
     <td></td>
     <td></td>
 </tr>
-<table id='ProyectoDeAcompañamiento'>
-<caption>ProyectoDeAcompañamiento</caption>
+<table id='ProyectoDeAcompaï¿½amiento'>
+<caption>ProyectoDeAcompaï¿½amiento</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
     <th>Column name</th>
@@ -5394,7 +5395,7 @@
     <th>Comment</th>
 </tr>
 <tr>
-    <td>idProyectoDeAcompañamiento</td>
+    <td>idProyectoDeAcompaï¿½amiento</td>
     <td>INT</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -5420,7 +5421,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Ejecución</td>
+    <td>Ejecuciï¿½n</td>
     <td>VARCHAR(100)</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -5446,7 +5447,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>FechaFinalización</td>
+    <td>FechaFinalizaciï¿½n</td>
     <td>DATE</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -5472,7 +5473,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>ProgramaÁreaAcompañamiento_Nombre</td>
+    <td>Programaï¿½reaAcompaï¿½amiento_Nombre</td>
     <td>VARCHAR(65)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -5485,7 +5486,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>ProgramaÁreaAcompañamiento_AcompañamientoIntegral_idNombreArea</td>
+    <td>Programaï¿½reaAcompaï¿½amiento_Acompaï¿½amientoIntegral_idNombreArea</td>
     <td>VARCHAR(50)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -5608,7 +5609,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>ProgramaÁreaAcompañamiento_Nombre</td>
+    <td>Programaï¿½reaAcompaï¿½amiento_Nombre</td>
     <td>VARCHAR(65)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -5621,7 +5622,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>ProgramaÁreaAcompañamiento_AcompañamientoIntegral_idNombreArea</td>
+    <td>Programaï¿½reaAcompaï¿½amiento_Acompaï¿½amientoIntegral_idNombreArea</td>
     <td>VARCHAR(50)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -6201,7 +6202,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>FechaFinalización</td>
+    <td>FechaFinalizaciï¿½n</td>
     <td>DATE</td>
     <td>&nbsp;</td>
     <td>&#10004;</td>
@@ -6214,7 +6215,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Programa Área Deportes_idNombrePrograma</td>
+    <td>Programa ï¿½rea Deportes_idNombrePrograma</td>
     <td>VARCHAR(70)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
@@ -6227,7 +6228,7 @@
     <td></td>
 </tr>
 <tr>
-    <td>Programa Área Deportes_Actividad Física y Deportes_idNombreArea</td>
+    <td>Programa ï¿½rea Deportes_Actividad Fï¿½sica y Deportes_idNombreArea</td>
     <td>VARCHAR(50)</td>
     <td>&#10004;</td>
     <td>&#10004;</td>
