--- a/DiccionarioDatosBienestar.html
+++ b/DiccionarioDatosBienestar.html
@@ -4164,7 +4164,7 @@
     <td></td>
 </tr>
 <table id='Incapacidad'>
-<p></p>
+<p>Informacion de la hora realizada correspondiente al cumplimiento de una corresponsabilidad.</p>
 <caption>Incapacidad</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -4716,6 +4716,7 @@
     <td></td>
 </tr>
 <table id='OrdenMedica'>
+<p>Relacion entre normatividad y comite asesor de bienestar universitario por facultad.</p>
 <caption>OrdenMedica</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -4800,6 +4801,7 @@
     <td></td>
 </tr>
 <table id='PerfilRiesgoIntegral'>
+<p>Estudiante PEAMA.</p>
 <caption>PerfilRiesgoIntegral</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -5244,6 +5246,7 @@
     <td></td>
 </tr>
 <table id='Producto_ofrecer_TiendaBienestarUN'>
+<p>Producto ofrecido en la tienda de bienestar universitario.</p>
 <caption>Producto_ofrecer_TiendaBienestarUN</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -5299,6 +5302,7 @@
     <td></td>
 </tr>
 <table id='Programa Area Deportes'>
+<p>Relacion entre producto y tienda de bienestar universitario que lo ofrece.</p>
 <caption>Programa Area Deportes</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -5707,6 +5711,7 @@
     <td></td>
 </tr>
 <table id='ReprEstudiantil'>
+<p>Rector general de bienestar universitario.</p>
 <caption>ReprEstudiantil</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -5814,6 +5819,7 @@
     <td></td>
 </tr>
 <table id='RepresentanteEmpleadosFacultad'>
+<p>Representante estudiantil.</p>
 <caption>RepresentanteEmpleadosFacultad</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -6514,5 +6520,6 @@
     <td></td>
 </tr>
 </table>
+<p>Relacion entre estudiante y su representante estudiantil.</p>
 </body>
 </html>
