--- a/DiccionarioDatosBienestar.html
+++ b/DiccionarioDatosBienestar.html
@@ -138,7 +138,6 @@
 <li><a href='#RecGeneralBienUniv'>RecGeneralBienUniv</a></li>
 <li><a href='#ReprEstudiantil'>ReprEstudiantil</a></li>
 <li><a href='#RepresentanteEmpleadosFacultad'>RepresentanteEmpleadosFacultad</a></li>
-<li><a href='#Resultados'>Resultados</a></li>
 <li><a href='#TarjetaPremiumPass'>TarjetaPremiumPass</a></li>
 <li><a href='#TiendaBienestarUN'>TiendaBienestarUN</a></li>
 <li><a href='#TorneoInterno'>TorneoInterno</a></li>
@@ -599,6 +598,7 @@
     <td></td>
 </tr>
 <table id='Anexos'>
+<p>Servicio de ambulancia requerido durante emergencias</p><br>
 <caption>Anexos</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -654,6 +654,7 @@
     <td></td>
 </tr>
 <table id='AntecedentesFamiliares'>
+<p>Link con toda la informacion relacionada a determinada normativa</p><br>
 <caption>AntecedentesFamiliares</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -696,6 +697,7 @@
     <td></td>
 </tr>
 <table id='AsesoriaAseguramientoSalud'>
+<p>Nombre del familiar con algun antecedente medico</p><br>
 <caption>AsesoriaAseguramientoSalud</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -764,6 +766,7 @@
     <td></td>
 </tr>
 <table id='AtencionEnSalud'>
+<p>Atencion dada a estudiantes que no tienen EPS ni ningun seguro medico</p><br>
 <caption>AtencionEnSalud</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -832,6 +835,7 @@
     <td></td>
 </tr>
 <table id='AuxilioEconomico'>
+<p>Verificacion de la validez de una cita medica tomada en la EPS</p><br>
 <caption>AuxilioEconomico</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -995,6 +999,7 @@
     <td></td>
 </tr>
 <table id='ComAsesorBienUnivFacult'>
+<p>Cita medica dada a traves del SINSU</p>
 <caption>ComAsesorBienUnivFacult</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -2376,6 +2381,7 @@
     <td></td>
 </tr>
 <table id='Docente'>
+<p>Verificacion de la existencia de alguna discapacidad</p>
 <caption>Docente</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -2539,6 +2545,7 @@
     <td></td>
 </tr>
 <table id='EnfermedadesDeFamiliares'>
+<p>Enfermedad de algun paciente</p>
 <caption>EnfermedadesDeFamiliares</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -2581,6 +2588,7 @@
     <td></td>
 </tr>
 <table id='Equipo_FomEmp_perr_Estud'>
+<p>Relacion entre el familiar de un usuario y su enfermedad</p>
 <caption>Equipo_FomEmp_perr_Estud</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -2852,6 +2860,7 @@
     <td></td>
 </tr>
 <table id='Evento/Taller'>
+<p>Evaluacion fisica que se realiza en todas las citas medicas</p>
 <caption>Evento/Taller</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -4070,6 +4079,7 @@
     <td></td>
 </tr>
 <table id='HoraRealizada'>
+<p>Enfermedades que ha padecido y padece un usuario</p>
 <caption>HoraRealizada</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -4259,6 +4269,7 @@
     <td></td>
 </tr>
 <table id='JefeBienestar'>
+<p>Validacion de una incapacidad dada por la EPS</p>
 <caption>JefeBienestar</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -4447,6 +4458,7 @@
     <td></td>
 </tr>
 <table id='Movimientos'>
+<p>Lista de medicamentos datos a un usuario despues de una cita medica</p>
 <caption>Movimientos</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -4515,6 +4527,7 @@
     <td></td>
 </tr>
 <table id='Normatividad'>
+<p>Movimientos realizado con alguna tarjeta Premium Pass</p>
 <caption>Normatividad</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -4674,6 +4687,7 @@
     <td></td>
 </tr>
 <table id='Normatividad_has_ComAsesorBienUnivFacult'>
+<p>Informacion de alguna normatividad</p>
 <caption>Normatividad_has_ComAsesorBienUnivFacult</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -4759,6 +4773,7 @@
     <td></td>
 </tr>
 <table id='PEAMA'>
+<p>Examen solicitado al terminar una cita medica</p>
 <caption>PEAMA</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -4843,7 +4858,21 @@
     <td></td>
     <td></td>
 </tr>
+<tr>
+    <td>perResultadoDireccion</td>
+    <td>VARCHAR(32)</td>
+    <td></td>
+    <td>&#10004;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td class='attr'>&nbsp;</td>
+    <td></td>
+    <td></td>
+</tr>
 <table id='Persona'>
+<p>Formulario que se le hace llenar a los usuario al ingresar a la universidad para saber como estan fisicamente</p>
 <caption>Persona</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -5055,6 +5084,7 @@
     <td></td>
 </tr>
 <table id='PersonaEscribir'>
+<p>Informacion general que tienen todas la personas de la universidad</p>
 <caption>PersonaEscribir</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -5097,6 +5127,7 @@
     <td></td>
 </tr>
 <table id='PersonalSalud'>
+<p>Autores de alguna publicacion</p>
 <caption>PersonalSalud</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -5178,6 +5209,7 @@
     <td></td>
 </tr>
 <table id='Producto'>
+<p>Doctores o enfermeros que atienden una cita medica o ambulancia</p>
 <caption>Producto</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -5601,6 +5633,7 @@
     <td></td>
 </tr>
 <table id='PuntoDeContacto'>
+<p>Libro, articulo, etc publicado por bienestar</p>
 <caption>PuntoDeContacto</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -5861,22 +5894,6 @@
     <td></td>
     <td></td>
 </tr>
-<table id='Resultados'>
-<caption>Resultados</caption>
-<tr><td colspan='11'></td></tr>
-<tr>
-    <th>Column name</th>
-    <th>DataType</th>
-    <th><abbr title='Primary Key'>PK</abbr></th>
-    <th><abbr title='Not Null'>NN</abbr></th>
-    <th><abbr title='Unique'>UQ</abbr></th>
-    <th><abbr title='Binary'>BIN</abbr></th>
-    <th><abbr title='Unsigned'>UN</abbr></th>
-    <th><abbr title='Zero Fill'>ZF</abbr></th>
-    <th><abbr title='Auto Increment'>AI</abbr></th>
-    <th>Default</th>
-    <th>Comment</th>
-</tr>
 <tr>
     <td>PerfilRiesgoIntegral_id</td>
     <td>INT</td>
@@ -5972,6 +5989,7 @@
     <td></td>
 </tr>
 <table id='TiendaBienestarUN'>
+<p>Tarjeta de credito dada a los profesores</p>
 <caption>TiendaBienestarUN</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -6423,6 +6441,7 @@
     <td></td>
 </tr>
 <table id='Vicerrector'>
+<p>Urgencia medica. Alli se traslada al usuario a un hospital</p>
 <caption>Vicerrector</caption>
 <tr><td colspan='11'></td></tr>
 <tr>
@@ -6519,7 +6538,7 @@
     <td></td>
     <td></td>
 </tr>
-</table>
 <p>Relacion entre estudiante y su representante estudiantil.</p>
+</table>
 </body>
 </html>
