--- a/DiccionarioDatosBienestar.html
+++ b/DiccionarioDatosBienestar.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="author" content="WB DataDic" />
-    <meta name="description" content="mydb Data Dictionary." />
-    <title>mydb Data Dictionary</title>
+    <meta name="description" content="Diccionario de Datos Bienestar UN" />
+    <title>Diccionario de Datos Bienestar UN</title>
     <style type="text/css">
     table{
         width: 100%;
@@ -51,7 +51,7 @@
 </head>
 <body>
 <div id="title-sect">
-<h1>mydb<br> Data Dictionay</h1>
+<h1>Diccionario de Datos Bienestar UN</h1>
 <p>
 <em>2023-03-29</em>
 </p>
@@ -59,7 +59,7 @@
 <em></em>
 </p>
 </div>
-<h2>Alphabetic Index</h2>
+<h2>Índice Alfabético</h2>
 <ul>
 <li><a href='#Actividad'>Actividad</a></li>
 <li><a href='#ActividadOrganizadores'>ActividadOrganizadores</a></li>
